# voice-kit

./: .gitignore  docker-compose.gpu.yml  docker-compose.yml
faster-whisper-server/: Dockerfile  Dockerfile.gpu  LICENSE  README.md  config.gpu.yaml  config.turkish.yaml  main.py  preload_models.py  pyproject.toml  start.sh
faster-whisper-server/.github/workflows/: publish.yml
faster-whisper-server/faster_whisper_server/: __init__.py  __main__.py  api.py  cli.py  config.py  formats.py  models.py
piper-server/: Dockerfile  README.md  config.yaml  preload_models.py  pyproject.toml  start.sh
piper-server/src/piper_server/: __init__.py  api.py  cli.py  config.py  model_manager.py
